--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,8 +34,9 @@ springfox:
         path: /swagger
 
 #TODO: remove inventory service url config
-dmall:
-  inventory:
-    url: http://localhost:9081
 
 #TODO: add eureka configs
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka.team-p.cloud.school.thoughtworks.cn
