--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,4 +39,4 @@ springfox:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka.team-p.cloud.school.thoughtworks.cn
+      defaultZone: http://eureka.team-p.cloud.school.thoughtworks.cn/eureka/
