--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,4 +4,4 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka.team-p.cloud.school.thoughtworks.cn
+      defaultZone: http://eureka.team-p.cloud.school.thoughtworks.cn/eureka/
