--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,10 +28,19 @@ spring:
     locations: "classpath:/db/migration"
 
   #TODO: change sleuth sample probability
+  sleuth:
+    sampler:
+      probability: 1.0
 
   #TODO: add zipkin configs for local
+  spring:
+    zipkin:
+      base-url: http://zipkin.team-p.cloud.school.thoughtworks.cn
 
 #TODO: change servlet log level to view the logs
+logging:
+  level:
+    org.springframework.web: DEBUG
 
 springfox:
   documentation:
